infra/k8s/simpledeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cheffappusers
  name: cheffappusersDeploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cheffappusers
  strategy: {}
  template:
    metadata:
      labels:
        app: cheffappusers
    spec:
      containers:
      - image: jespstpierre/cheffapp-user:latest
        imagePullPolicy: Always
        name: cheffappusers
        ports:
        - containerPort: 3001
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
