infra/k8s/simplepod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mynginx
  name: mynginx
spec:
  containers:
  - image: nginx
    name: jespstpierre/cheffapp-user:latest
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
