infra/k8s/externginx.yml
apiVersion: v1
kind: Service
metadata:
  name: external-client-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer: nlb
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
  selector:
    component: web
